<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_hive_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nottoobee.toobee.smarthive.HiveInfo">

    <include
        layout="@layout/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/include"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layer_5"
        android:layout_below="@+id/include"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="60dp"
        android:id="@+id/relativeLayout">

        <TextView
            android:text="@string/hive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="90dp"
            android:id="@+id/info_hive_name"
            android:textSize="26sp"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/temperature"
            android:layout_width="wrap_content"
            android:layout_below="@id/info_hive_name"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:id="@+id/info_temp_label"
            android:textAlignment="center"
            android:layout_alignEnd="@+id/info_date_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_hive_name"
            android:textColor="@color/bad"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="30dp"
            android:id="@+id/info_temp" />

        <TextView
            android:text="@string/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_temp_label"
            android:layout_alignEnd="@id/info_temp_label"
            android:layout_marginTop="20dp"
            android:id="@+id/info_humidity_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/info_humidity"
            android:layout_below="@id/info_temp"
            android:layout_alignEnd="@id/info_temp"
            android:layout_marginTop="20dp"
            android:textColor="@color/good" />

        <TextView
            android:text="@string/last_inspection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_temp_label"
            android:layout_marginStart="50dp"
            android:layout_marginTop="55dp"
            android:id="@+id/info_date_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="@color/good"
            android:layout_below="@id/info_temp_label"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="55dp"
            android:id="@+id/info_date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_date_label"
            android:layout_marginStart="75dp"
            android:layout_marginTop="20dp"
            android:id="@+id/info_weight_label"
            android:layout_alignEnd="@+id/info_date_label"
            android:text="Weight:"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_date_label"
            android:textColor="@color/good"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:id="@+id/info_weight" />

        <TextView
            android:text="@string/population"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_weight_label"
            android:layout_marginTop="20dp"
            android:id="@+id/info_population_label"
            android:layout_alignEnd="@+id/info_weight_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_weight_label"
            android:textColor="@color/bad"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:id="@+id/info_population" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/hive_green"
            android:id="@+id/imageView"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="16dp" />

        <TextView
            android:text="@string/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_population_label"
            android:layout_alignEnd="@id/info_population_label"
            android:layout_marginTop="20dp"
            android:id="@+id/info_location_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/info_population"
            android:layout_alignEnd="@id/info_population"
            android:layout_marginTop="20dp"
            android:id="@+id/info_location"
            android:textColor="@color/good" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_refresh_yellow"
            android:layout_below="@id/info_population"
            android:layout_alignParentEnd="true"
            android:onClick="setLocation"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="15dp"
            android:id="@+id/refreshLocation" />

        <ImageView
            android:layout_marginTop="12dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:srcCompat="@drawable/map_icon"
            android:layout_below="@id/info_location_label"
            android:id="@+id/imageView2"
            android:layout_marginStart="140dp" />

        <TextView
            android:layout_marginTop="10dp"
            android:paddingTop="3dp"
            android:text="@string/view_on_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_below="@id/info_location_label"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:layout_marginStart="140dp"
            android:paddingBottom="3dp"
            android:onClick="goToMap" />

    </RelativeLayout>

</RelativeLayout>
