<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nottoobee.toobee.smarthive.Settings">

    <include
        layout="@layout/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/include" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layer_5"
        android:layout_below="@+id/include"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="60dp"
        android:id="@+id/relativeLayout2">

        <TextView
            android:text="@string/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="50dp"
            android:id="@+id/textView13" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="50dp"
            android:id="@+id/spinner" />

        <TextView
            android:text="@string/units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView13"
            android:layout_marginStart="35dp"
            android:layout_marginTop="50dp"
            android:id="@+id/textView14" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView13"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="50dp"
            android:id="@+id/spinner2" />

        <TextView
            android:text="@string/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView14"
            android:layout_marginStart="35dp"
            android:layout_marginTop="50dp"
            android:id="@+id/textView15" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView14"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="50dp"
            android:id="@+id/spinner3" />
    </RelativeLayout>

</RelativeLayout>
